Add canonical search API
